# pyPII-TDM

./: LICENSE  README.md
pm/: .pm_history  app.py  data.csv  pyproject.toml  sample_data.csv  sample_data.py
sql/: create_db.sql
