[project]
name = "pm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
py-modules = ["app", "sample_data"]
dependencies = [
    "pymssql",
]

[project.scripts]
pm = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
only-include = ["app.py"]
